<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".charliekelly.activities.SettingsActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"/>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_choose_location"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textSize="25sp" />
                        <Button
                            android:id="@+id/btn_reset_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/title1"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:alpha="0.5"
                            android:background="@android:color/transparent"
                            android:drawableRight="@drawable/reset_drawable"
                            android:text="@string/reset"
                            android:textSize="10sp" />
                    </RelativeLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/your_current_location"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/tvLat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvLng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvCity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvCountrycode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvDoresetauthenticated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/spinnerLocation"
                                android:layout_width="232dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp" />

                            <com.dd.processbutton.iml.ActionProcessButton
                                android:id="@+id/btn_select_position"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/set_pos"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                custom:pb_colorComplete="@color/green_complete"
                                custom:pb_colorError="@color/red_error"
                                custom:pb_colorNormal="@color/colorPrimary"
                                custom:pb_colorPressed="@color/colorPrimaryDark"
                                custom:pb_colorProgress="@color/purple_progress"
                                custom:pb_textComplete="Success"
                                custom:pb_textError="Error"
                                custom:pb_textProgress="Loading" />

                        </LinearLayout>


                    <com.dd.processbutton.iml.ActionProcessButton
                        android:id="@+id/btn_add_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/select_location"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            custom:pb_colorComplete="@color/green_complete"
                        custom:pb_colorError="@color/red_error"
                            custom:pb_colorNormal="@color/colorPrimary"
                            custom:pb_colorPressed="@color/colorPrimaryDark"
                            custom:pb_colorProgress="@color/purple_progress"
                            custom:pb_textComplete="Success"
                            custom:pb_textError="Error"
                        custom:pb_textProgress="Loading" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_uid"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textSize="25sp" />
                        <Button
                            android:id="@+id/btn_reset_uuid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/textView"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:alpha="0.5"
                            android:background="@android:color/transparent"
                            android:drawableRight="@drawable/reset_drawable"
                            android:text="@string/reset"
                            android:textSize="10sp" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/spinnerUuid"
                            android:layout_width="234dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp" />

                        <com.dd.processbutton.iml.ActionProcessButton
                            android:id="@+id/btn_set_uuid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/set_pos"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            custom:pb_colorComplete="@color/green_complete"
                            custom:pb_colorError="@color/red_error"
                            custom:pb_colorNormal="@color/colorPrimary"
                            custom:pb_colorPressed="@color/colorPrimaryDark"
                            custom:pb_colorProgress="@color/purple_progress"
                            custom:pb_textComplete="Success"
                            custom:pb_textError="Error"
                            custom:pb_textProgress="Loading" />

                    </LinearLayout>

                    <com.dd.processbutton.iml.ActionProcessButton
                        android:id="@+id/btn_add_uuid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_uuid"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        custom:pb_colorComplete="@color/green_complete"
                        custom:pb_colorError="@color/red_error"
                        custom:pb_colorNormal="@color/colorPrimary"
                        custom:pb_colorPressed="@color/colorPrimaryDark"
                        custom:pb_colorProgress="@color/purple_progress"
                        custom:pb_textComplete="Success"
                        custom:pb_textError="Error"
                        custom:pb_textProgress="Loading" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                card_view:cardCornerRadius="4dp">


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feature_description"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>